[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/gui/start_menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/bg2.png" type="Texture" id=2]
[ext_resource path="res://sprites/yorha_logo.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://fonts/benguiatstd_med.fnt" type="BitmapFont" id=5]
[ext_resource path="res://sound/sfx/button_enter_start.wav" type="Sample" id=6]
[ext_resource path="res://sound/sfx/button_select.wav" type="Sample" id=7]

[sub_resource type="Animation" id=3]

resource/name = "base"
length = 3.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 0.5 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("button_start:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.5, 1.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("button_exit:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1, 1.8 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("arrow:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 1.5, 2.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 1.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"input_active" } ] }

[sub_resource type="Animation" id=2]

resource/name = "exit"
length = 2.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("arrow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.49 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("button_start:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("button_exit:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 1.95 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"yes" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("sprite:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.5, 1.8 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.5, 0.1 ] }

[sub_resource type="Animation" id=4]

resource/name = "exit"
length = 2.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("arrow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.49 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("button_start:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("button_exit:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 1.95 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"no" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("sprite:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.5, 1.8 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.5, 0.1 ] }

[sub_resource type="SampleLibrary" id=5]

samples/button_enter_start = { "db":3.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/button_select = { "db":3.0, "pitch":1.0, "sample":ExtResource( 7 ) }

[node name="start_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="bg" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 601.803, 365.863 )
transform/scale = Vector2( 35.3037, 22.6037 )
texture = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]

visibility/opacity = 0.0
visibility/self_opacity = 0.45
transform/pos = Vector2( 600, 360 )
transform/scale = Vector2( 1.38, 1.38 )
texture = ExtResource( 3 )

[node name="arrow" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 395.643, 615.7 )
transform/rot = -90.0
texture = ExtResource( 4 )

[node name="button_start" type="Control" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 596.0
margin/right = 640.0
margin/bottom = 636.0

[node name="button" type="Label" parent="button_start"]

visibility/opacity = 0.9
rect/scale = Vector2( 0.99, 0.99 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -121.0
margin/top = 0.0
margin/right = 147.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.863281, 0.863281, 0.863281, 1 )
text = "Start Game"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_exit" type="Control" parent="."]

editor/display_folded = true
visibility/opacity = 0.0
rect/scale = Vector2( 0.99, 0.99 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 446.0
margin/top = 507.0
margin/right = 714.0
margin/bottom = 555.0

[node name="button" type="Label" parent="button_exit"]

visibility/opacity = 0.9
rect/scale = Vector2( 0.99, 0.99 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 157.0
margin/right = 291.0
margin/bottom = 205.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.863281, 0.863281, 0.863281, 1 )
text = "Exit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 3 )
anims/enter = SubResource( 2 )
anims/exit = SubResource( 4 )
next/exit = ""
playback/active = true
playback/speed = 1.5
blend_times = [  ]
autoplay = "base"

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 600, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.44, 1.44 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2


